Closed Bug 1050095 Opened 11 years ago Closed 11 years ago

[Text Selection] Prevent generate too much unwanted event when calling SelectionCarets::SelectWord.

Categories

(Core :: DOM: Selection, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: mtseng, Assigned: mtseng)

References

Details

Attachments

(1 file)

Right now SelectWord will generate 4 selection change events with drag reason and 1 selection change event with mouse up reason. 4 drag events are useless and will cause some bug when showing utility bubble. So we need prevent those events be fired.
Attached patch bug1050095Splinter Review
SetSelectionDragState will call StartBatchChanges()/EndBatchChanges so that only mouseup event would be fired.
Attachment #8469058 - Flags: review?(roc)
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: