Bug 1050095 - Prevent drag event when calling SelectionCarets::SelectWord(). r=roc